Update [Simulation and Parsing] : Revert simulation methods to single map use, update list formatting in parser